<resources>
    <string name="app_name">ConstructionMitra</string>
    <string name="title_home">होम</string>
    <string name="title_dashboard">नेटवर्क</string>
    <string name="title_notifications">प्रोफाइल </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout_text">Are you sure you want to logout ?</string>
    <string name="sr_no">Sr. No.</string>
    <string name="contact_number">Contact No.</string>
    <string name="posted_job_menu_option_1">Publish</string>
    <string name="posted_job_menu_option_2">Delete</string>
    <string name="msg_select_your_category">Please choose your category</string>
    <string name="work_sample_added">Work Sample Added</string>
    <string name="profile_picture_updated">Profile Picture Updated</string>
    <string name="company_document_updated">Company Document Updated</string>
    <string name="enter_valid_details">Please Enter Valid Details</string>
    <string name="enter_valid_otp">Please Enter Valid OTP</string>
    <string name="enter_valid_mobile_num">Please Enter A Valid Mobile Number</string>
    <string name="enter_valid_email_address">Please Enter A Valid Email Id</string>
    <string name="enter_valid_name">Please enter your name</string>
    <string name="something_went_wrong">Something went wrong, please try again.</string>
    <string name="mandatory_fields_error">please fill mandatory fields.</string>
    <string name="all_fields_are_mandatory">All fields are mandatory!</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="continue_text">Continue</string>
    <string name="back">Back</string>
    <string name="login_title">&lt;font color="#4883C1"> कंस्ट्रक्शन &lt;font/> &lt;font color="#00B867">मित्रा&lt;font/></string>
    <string name="app_title_english">&lt;font color="#4883C1"> Construction &lt;font/> &lt;font color="#00B867">Mitra&lt;font/></string>
    <string name="login_sub_heading">निर्माण स्थलों पर काम पाना हुआ अब आसान............</string>
    <string name="labour_contractor">&lt;font color="#4883C1"> निर्माण श्रमिक, &lt;font/>  &lt;font color="#00B867">निर्माण कर्ता&lt;font/></string>
    <string name="get_together_here">दोनों मिलते है यहाँ</string>
    <string name="labour_type">इंजीनियर / सुपरवाइजर निर्माण एजेंसी, पेट्टी कॉन्ट्रैक्टर, निर्माण श्रमिक</string>
    <string name="contractor_type">निर्माण कर्ता</string>
    <string name="need_work">मुझे काम चाहिए</string>
    <string name="need_labour">मुझे कुशल निर्माण श्रमिक चाहिए</string>
    <string name="change_language">भाषा बदलें</string>
    <string name="login_button_text">मोबाइल से लॉगिन/ रजिस्टर करें</string>
    <string name="login_registration_page_heading">Enter your mobile number and name\nअपना मोबाइल नंबर और नाम बतायें</string>
    <string name="enter_your_mobile">अपना मोबाइल नंबर और नाम बतायें</string>
    <string name="mobile_number_hn">मोबाइल नंबर</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_10_digit_mobile">10 अंकों का मोबाइल नंबर डालें</string>
    <string name="otp_will_be_sent">हम आपको इस नंबर पर OTP भेजेंगे\n We Will send you otp</string>
    <string name="name">Name</string>
    <string name="name_hn">नाम</string>
    <string name="your_full_name">आपका पूरा नाम</string>
    <string name="enter_otp">ओ. टी. पी. टाइप करे\nEnter OTP</string>
    <string name="enter_otp_text">ओ. टी. पी. टाइप करे</string>
    <string name="enter_otp_english">Enter OTP</string>
    <string name="type_otp">ओ. टी. पी. टाइप करें</string>
    <string name="enter_4_digit_otp">अपना 4 अंको का OTP डालें</string>
    <string name="send_otp_again">ओ. टी. पी. दोबारा भेजें</string>
    <string name="next">Next/ आगे बढ़ें</string>
    <string name="please_choose_one_option">किसी एक विकल्प को चुने</string>
    <string name="congratulations_mobile_verified">बधाई हो ! आपका मोबाइल नंबर वेरीफाई हो गया है</string>
    <string name="labour">निर्माण श्रमिक</string>
    <string name="patti_contractor">पेट्टी कांट्रेक्टर</string>
    <string name="need_work_for">स्वयं के लिए काम ढूंढ रहे हो तो यह विकल्प चुने</string>
    <string name="choose_option_if_you_have_team">अगर आप के पास काम करने वालों की टीम है तो यहाँ विकल्प चुने</string>
    <string name="specialized_agency">Specialised Agency</string>
    <string name="specialized_in">वाटर प्रूफिंग, फायर फाइटिंग इत्यादि काम करते हो तो यह विकल्प चुनें</string>
    <string name="engineer">Engineer/Supervisor</string>
    <string name="engineer_in">इंजीनियर / कंस्ट्रक्शन साइट सुपरवाइजर हो तो यह विकल्प चुनें</string>
    <string name="choose_work">अपने कौशल के अनुरूप काम का चुनाव करें।</string>
    <string name="choose_sub_cat_heading">आपके पास किन किन कामों के लिए टीम उपलब्ध है</string>
    <string name="choose_three_works">अधिकतम 3 काम चुने</string>
    <string name="choose_three_works_eng">Maximum 3 work</string>
    <string-array name="work_options">
        <item>चुनाई मिस्त्री / राज मिस्त्री</item>
        <item>टाइल मिस्त्री</item>
        <item>मार्बल ग्रेनाइट मिस्त्री</item>
        <item>प्लास्टरिंग</item>
        <item>लेबर सप्लायर</item>
        <item>बार बाइंडर/सरिया मिस्त्री</item>
        <item>शटरिंग</item>
        <item>फर्नीचर</item>
        <item>वेल्डिंग वर्क</item>
        <item>इलेक्ट्रिक वर्क</item>
        <item>P.O.P, वॉल पुट्टी</item>
        <item>पेंटिंग</item>
    </string-array>
    <string name="heading">आपको वही काम दिखेंगे जिसमे 5 लोगों तक की \nजरुरत हो</string>
    <string name="sub_heading">क्या आप कांट्रेक्टर के रूप में काम करना चाहते है ?\n हाँ या ना का विकल्प चुनिए</string>
    <string name="yes">हाँ</string>
    <string name="no">ना</string>
    <string name="hint_firm_name">अपनी फर्म का नाम बतायें</string>
    <string name="agency_or_firm_name">Agency/Firm Name</string>
    <string name="people_in_your_team">अपनी फर्म का नाम बतायें आप किस नाम से काम करते हैं</string>
    <string name="team_count">कितने लोग</string>
    <string name="submit">Submit</string>
    <string name="registration_cta_hint">हमारी &lt;font color="#FF1D2A">गोपनीयता निति&lt;font/> एवं &lt;font color="#4883C1">नियम और शातों&lt;font/> को सहमत करते हुए आगे बड़े</string>
    <string name="resend_otp">ओ.टी.पी दोबारा भेजें/ Resend OTP</string>
    <string name="num_verified">Congratulations! Your mobile is verified</string>
    <string name="agency_detail_heading">Please mention your Agency/Firm Name</string>
    <string name="about_yourself">अपने बारें में बताएं</string>
    <string name="change_about_details">व्यक्तिगत जानकारी बदले</string>
    <string name="profile">प्रोफ़ाइल</string>
    <string name="catalog_heading">किए हुए कामों की तस्वीरें डालें </string>
    <string name="your_name">अपना नाम बतायें</string>
    <string name="your_phone_number">अपना फोन नंबर बतायें</string>
    <string name="profile_subheading">काम पाने के लिए अपनी जानकारी सही दे और  प्रोफाइल को अपडेट रखें</string>
    <string name="about_your_work_priority">अपने काम की प्रथमिकता बतायें</string>
    <string name="choose_your_work_location">अपने काम करने की जगह का चुनाव करे</string>
    <string name="other_mobile_num">आपका अन्य मोबाइल नंबर</string>
    <string name="work">काम</string>
    <string name="team_count_title">टीम की संख्या</string>
    <string name="you_can_more_than_once_city_hn">आप एक से ज्यादा जगह का चुनाव कर सकते है</string>
    <string name="save_your_information_hn">जानकारी सेव करें</string>
    <string name="change_your_work">अपना चयनित कार्य बदलें</string>
    <string name="gender">लिंग</string>
    <string name="male">पुरुष</string>
    <string name="female">स्त्री</string>
    <string name="other">अन्य</string>
    <string name="hint_your_age">अपनी आयु बताएँ</string>
    <string name="where_is_your_home">आपका घर कहां है</string>
    <string name="help_us_to_find_work_for_you">ये जानकारी हमें मदद करती है आपको आपके घर के पास काम दिलवाने में</string>
    <string name="upload_your_pic">Please upload your photo</string>
    <string name="upload_your_one_photo_hn">अपनी एक फोटो अपलोड करे</string>
    <string name="upload_your_id_hn">अपनी एक आई.डी अपलोड करें</string>
    <string name="by_uploading_your_id_hn">आई.डी से आपकी प्रोफाइल की विश्वसनीयता की पहचान होती है</string>
    <string name="work_preference_heading">अपने काम की प्रार्थमिकता बतायें</string>
    <string name="please_select_work_preference">आप कहाँ काम करना चाहते है, ऊपर से एक विकल्प चुने</string>
    <string name="preferred_location">शहर की प्रार्थमिकता</string>
    <string name="preferred_location_for_work">आप किस शहर में काम करना चाहते हो</string>
    <string name="update_exp">जानकारी जोड़े</string>
    <string name="share_your_exp">अपना अनुभव साझा करें</string>
    <string name="work_exp">काम का अनुभव</string>
    <string name="work_exp_in_years">आपको अपने काम का कितने सालों का अनुभव है ?</string>
    <string name="location_priority">शहर की प्रार्थमिकता</string>
    <string name="which_location_you_want_to_work">आप कोनसे शहर में काम चाहते है</string>
    <string name="selected_work">चयनित काम</string>
    <string name="change_selected_work">चुने हुए काम को बदले</string>
    <string name="contractor_verification_doc">कॉन्ट्रैक्टर सत्यापन डाक्यूमेंट</string>
    <string name="upload_doc">डाक्यूमेंट अपलोड करें</string>
    <string name="home_address_formatter">गृह नगरं - %s</string>
    <string name="age_formatter">%s वर्ष</string>
    <string name="current_address_formatter">वर्तमान निवास - %s</string>
    <string name="view_all_formatter">%s images\nView all\nimages</string>
    <string name="upload_work_history">अपने पुराने कामों की फोटो सेव कर सकते है , इससे काम जल्दी मिलने के संभावनाएं बढ़ती है</string>
    <string name="upload_your_letter_head">वेरिफिकेशन के लिए अपना लेटर हेड \nअपलोड करें</string>
    <string name="phone_number">फ़ोन नंबर</string>
    <string name="do_contact">संपर्क करे</string>
    <string name="edit">Edit</string>
    <string name="company_name">Company Name</string>
    <string name="enter_mobile_number">Enter Mobile Number*</string>
    <string name="company_address">Company Address</string>
    <string name="enter_company_name">Enter Company Name*</string>
    <string name="person_name_for_job">Name of the person posting job requirement</string>
    <string name="enter_contact_person_name">Enter Contact Person Name*</string>
    <string name="designation">Designation</string>
    <string name="enter_designation">Enter your Designation</string>
    <string name="contact_person_mobile_number">Contact Person Mobile number</string>
    <string name="you_will_receive_notification">You will be receiving notification over this number</string>
    <string name="email_id">Email-ID</string>
    <string name="enter_email_id">Enter Email-Id*</string>
    <string name="add_project_details">Add Project Detail</string>
    <string name="name_of_project">Name of the Project</string>
    <string name="enter_project_name">Please enter Project name</string>
    <string name="add_employee_details">Add Employee Details</string>
    <string name="employee_name">Employee Name</string>
    <string name="enter_project_location">Enter Project Location*</string>
    <string name="enter_location">Enter Location*</string>
    <string name="select_city">Select City</string>
    <string name="save_and_update">Save and Update</string>
    <string name="complete_your_verification_inst">Complete your company verification by uploading company document for faster job approval</string>
    <string name="jobs">Jobs</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="add_experience_details">Add Experience Details</string>
    <string name="add_education_details">Add Education Details</string>
    <string name="add_personal_details">Add Personal Details</string>
</resources>