<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:paddingBottom="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            style="@style/Text.SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/add_employee_details"
            android:textColor="@color/blue_300"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Company details -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/company_name"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCompanyName"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_company_name"
            android:inputType="textCapWords"
            android:text="RDX tech"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContactPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/person_name_for_job"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCompanyName"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etContactPersonName"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_contact_person_name"
            android:inputType="textCapWords"
            android:text="Sumit mehra"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContactPersonName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/designation"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etContactPersonName"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDesignation"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_designation"
            android:inputType="textCapWords"
            android:text="engineer"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesignation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMobileNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/contact_person_mobile_number"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDesignation"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNum"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:maxLines="1"
            android:text="8860436965"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMobileNum" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotificationIns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/you_will_receive_notification"
            android:textColor="@color/greyed_text"

            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNum"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/email_id"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotificationIns"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="manishkumarj357@gmail.com"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddProjectDetails"
            style="@style/Text.SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/add_project_details"
            android:textColor="@color/blue_300"
            android:typeface="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameOfProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/name_of_project"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddProjectDetails"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etProjectName"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_project_name"
            android:inputType="textCapWords"
            android:text="Atam Nirbhar"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameOfProject" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etProjectLocation"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:hint="@string/enter_project_location"
            android:inputType="textCapWords"
            android:paddingEnd="@dimen/_10sdp"
            android:text="New Delhi"
            android:maxLines="1"
            android:drawableEnd="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etProjectName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>