<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:paddingBottom="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            style="@style/Text.SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:textSize="@dimen/text_medium"
            android:text="@string/edit"
            android:textColor="@color/blue_300"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Company details -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_name"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmployeeName"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/employee_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/designation"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmployeeName"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDesignation"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_designation"
            android:inputType="textCapWords"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesignation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMobileNumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/mobile_number"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDesignation"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNum"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_your_mobile"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMobileNumb" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/email_id"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNum"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/company_name"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCompany"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_company_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompanyName" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/company_address"
            android:textColor="@color/greyed_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCompany"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddress"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_location"
            android:inputType="textCapWords"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSelectCity"
            style="@style/App.Editable.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:hint="@string/select_city"
            android:inputType="textCapWords"
            android:paddingEnd="@dimen/_10sdp"
            android:maxLines="1"
            android:drawableEnd="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAddress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompanyVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etSelectCity"
            android:text="Company Verification Document"
            android:textColor="@color/greyed_text"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_border_grey_with_rounded_corner"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_complete_verification"
            style="@style/Text.Card.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tvCompanyVerification"
            android:text="@string/complete_your_verification_inst"
            android:textColor="@color/greyed_text"
            android:layout_marginTop="@dimen/_2sdp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEdit"
            style="@style/App.Button.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_and_update"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_complete_verification"
            />

        <include layout="@layout/progress_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>