<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/workDetailSectionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/_12sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/grey_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="@dimen/text_medium"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_work"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@id/tvShowPhoneNum"
        android:textSize="@dimen/text_medium"
        android:paddingStart="@dimen/_15sdp"
        android:gravity="start"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShowPhoneNum"
        style="@style/App.Button.Green"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:text="@string/do_contact"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/bg_button_green_disabled"
        app:layout_constraintStart_toEndOf="@id/tvDesc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/text_small"
        android:gravity="center_horizontal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>